# comfy-agent-prompter

./: .env.example  .gitignore  README.md  pyproject.toml
comfy_agent_prompter/: __init__.py  app_state.py  cli.py  config.py  files.py  json_utils.py  main.py  models.py  prompts.py
comfy_agent_prompter/comfy/: __init__.py  client.py  workflow.py
comfy_agent_prompter/orchestration/: runner.py
comfy_agent_prompter/providers/: openai_compatible.py
comfy_agent_prompter/services/: run_store.py
comfy_agent_prompter/ui/static/: app.js  styles.css
comfy_agent_prompter/ui/templates/: index.html
docs/: architecture.md
examples/: config.example.json  config.test.json  workflow.mapping.example.json  workflow.placeholder.json
workflows/: comfy_klein_image_gen_api_512.json  comfy_klein_image_gen_api_512.mapping.json
